GPF-1454 fix agp cell overflow

--- a/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
+++ b/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
@@ -55,9 +55,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  justify-content: center;
-  align-items: center;
-  display: flex;
+  line-height: 35px;
 }
 
 .header-cell {
